<resources>
    <string name="app_name">FindFood</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FindFood</string>
    <string name="nav_header_subtitle">By Raphael Ienco, Dimitri Burvenique, Olivier Salfranc</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="avis">Avis</string>
    <string name="credits">Credits</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_localisation">Enable localisation</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="key_name">key_name</string>

    <string name="pref_search_delay_edit_text">Search Delay</string>
    <string name="key_location_switch">key_location_switch</string>
    <string name="key_search_delay">key_search_delay</string>
    <string name="pref_search_radius_edit_text">Search Radius</string>
    <string name="key_search_radius">key_search_radius</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="key_is_db_initialized">key_is_db_initialized</string>
    <string name="bienvenue">Bienvenue,</string>
    <string name="descriptionAppli">Cette application vous permet de trouver les fast food les plus proches de vous,leurs notes,leurs avis. Vous pouvez égallement déposer un avis sur les fast food autour de vous.</string>

</resources>
