<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_location_switch"
        android:title="@string/pref_title_localisation" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="@string/key_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:defaultValue="100"
        android:inputType="number"
        android:title="@string/pref_search_delay_edit_text"
        android:key="@string/key_search_delay"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dependency="@string/key_location_switch" />

    <EditTextPreference
        android:defaultValue="10"
        android:inputType="number"
        android:title="@string/pref_search_radius_edit_text"
        android:key="@string/key_search_radius"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:dependency="@string/key_location_switch" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
